infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-auth-service
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: access-auth-service
  template:
    metadata:
      labels:
        app: access-auth-service
      annotations:
        prometheus.io/scrape: 'true'       
        prometheus.io/path: '/q/metrics/prometheus'
        prometheus.io/port: '8080'
    spec:
      containers:
        - name: access-auth-service
          image: lucasd-coder/access-auth-service:latest          
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"         
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: "/q/health/ready"
            initialDelaySeconds: 50
            periodSeconds: 12
          livenessProbe:            
            httpGet:
              port: 8080
              path: "/q/health/live"
            initialDelaySeconds: 50
            periodSeconds: 12
          lifecycle:
              preStop:
                exec:
                  command:
                    - /bin/sleep
                    - "30"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: access-auth-service
  name: access-auth-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8080'
    prometheus.io/path: '/q/metrics/prometheus'
spec:
  ports:
  - port: 8080
    name: http-server
    protocol: TCP      
    targetPort: 8080
  selector:
    app: access-auth-service
