infra/k8s/krakend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend
spec:
  selector:
    matchLabels:
      app: krakend
  replicas: 1
  minReadySeconds: 10
  strategy: 
      type: "RollingUpdate"
      rollingUpdate: 
        maxSurge: 1
        maxUnavailable: 1
  template:
    metadata:
      labels:
        app: krakend
      annotations:
        prometheus.io/scrape: 'true'        
        prometheus.io/path: '/metrics'
        prometheus.io/port: '9090'
    spec:
      containers:
      - name: krakend
        image: devopsfaith/krakend:2.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        - containerPort: 9090
        resources:
          requests:
            memory: "500Mi"
            cpu: 1
          limits:
            memory: "1Gi"
            cpu: 1        
        command: [ "/usr/bin/krakend" ]
        args: [ "run", "-d", "-c", "/conf/krakend-config.json", "-p", "8080" ]
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - name: krakend-config-vol
            mountPath: /conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: krakend-config
                path: krakend-config.json
            name: krakend-conf
          name: krakend-config-vol
---
apiVersion: v1
kind: Service
metadata:
  name: krakend
  labels:
    app: krakend
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/metrics'
    prometheus.io/port: '9090'
spec:
  ports:
  - name: prometheus-metrics
    port: 9090
    targetPort: 9090
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: krakend
  type: ClusterIP
