infra/k8s/postgres.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server-postgres
  labels:
    app: server-postgres
spec:
  replicas: 1
  minReadySeconds: 10
  strategy: 
      type: "RollingUpdate"
      rollingUpdate: 
        maxSurge: 1
        maxUnavailable: 1
  selector:
    matchLabels:
      app: server-postgres
  template:
    metadata:
      labels:
        app: server-postgres
    spec:
      containers:
        - name: server-postgres
          image: postgres:14.4-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "500Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "2"
          volumeMounts:
            - name: server-postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: server-postgres-volume
          persistentVolumeClaim:
            claimName: server-postgres-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server-postgres
  name: server-postgres
spec:
  selector:
    app: server-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
